--- a/src/App.scss
+++ b/src/App.scss
@@ -283,8 +283,133 @@ header {
       align-items: center;
     }
 
-    
+    &-delete {
+      margin-left: auto;
+      display: none;
+
+      svg {
+        color: #cacaca
+      }
+    }
+
+    &.active, &:hover {
+      font-weight: bold;
+      background-color: white;
+    }
+
+    &:nth-child(1) {
+      .sidebar_dot {
+        color: #6accbc
+      }
+    }
+
+    &:nth-child(2) {
+      .sidebar_dot {
+        color: #fad003
+      }
+    }
+
+    &:nth-child(3) {
+      .sidebar_dot {
+        color: #ff8d85
+      }
+    }
+
+    &:nth-child(4) {
+      .sidebar_dot {
+        color: #ff9932
+      }
+    }
+
+    &:nth-child(5) {
+      .sidebar_dot {
+        color: #af38eb
+      }
+    }
   }
+
+  &_projects {
+    @include va('left');
+    padding-left: 3px;
+  }
+
+  &_dot {
+    margin-right: 10px;
+    font-size: 30px;
+  }
+
+  &_middle {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: $generic-border;
+    padding-left: 10px;
+    cursor: pointer;
+
+    span {
+      color: #0000008a;
+      margin-right: 10px;
+
+      svg.hidden-projects {
+        -webkit-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+      }
+    }
+
+    h2 {
+      margin: 0;
+      color: #333;
+      font-size: 15px;
+      font-weight: bold;
+      padding-bottom: 20px;
+    }
+  }
+
+  &_generic {
+    li {
+      list-style-type: none;
+      color: #333;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      cursor: pointer;
+      line-height: 1.50;
+      font-size: 15px;
+      padding-left: 0;
+      padding-right: 0;
+
+      div:nth-child(1) {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        padding: 10px 0 10px 10px;
+        width: 100%;
+
+        span:first-of-type {
+          margin-right: 10px;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+
+          svg {
+            width: 18px;
+            height: 18px;
+            color: #555;
+          }
+        }
+      }
+
+      &.active, &:hover {
+        font-weight: bold;
+        background-color: white;
+      }
+    }
+  }  
 }
 
 
