--- a/src/App.scss
+++ b/src/App.scss
@@ -517,29 +517,188 @@ header {
   }
 }
 
+// add task
+.add-task {
+  &_overlay {
+    background: rgba(102,102, 102, 0.5);
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+    height: calc(100vh);
 
+    .add-task_main {
+      @include mq('900px') {
+        width: 90%;
+      }
 
+      overflow: visible;
+      margin-bottom: 20px;
+      margin-top: 55px;
+      border-radius: 5px;
+      background-color: white;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      padding: 20px 30px;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
 
+      .header {
+        font-size: 13px;
+        margin-bottom: 20px;
+        float: left;
+      }
+    }
 
+    .add-task_cancel-x {
+      cursor: pointer;
+      color: gray;
+      float: right;
+      font-weight: bold;
+      font-size: 12px;
+      margin-top: 10px;
+    }
+  }
 
+  &_main {
+    position: relative;
+  }
 
+  &_project, &_data {
+    cursor: pointer;
+    float: right;
+    color: gray;
+    margin: 20px 10px;
+  }
 
+  &_project {
+    margin-right: 0;
+  }
 
+  &_content {
+    width: 100%;
+    border: 1px solid #ddd;
+    background-color: white !important;
+    border-radius: 3px;
+    height: 35px;
+    padding: 0 10px
+  }
 
+  &_cancel, &_submit {
+    @include no-select()
+  }
 
+  &_cancel {
+    @include cancel();
+  }
 
+  &_submit {
+    @include btn('90px')
+  }
+}
 
+.add-task_shallow, .add-project {
+  @include no-select();
+  cursor: pointer;
+  margin-bottom: 20px;
+}
 
+.add-task_plus, .add-project_plus {
+  color: #dd3b39;
+  font-size: 18px;
+}
 
+.add-task_text, .add-project_text {
+  display: inline-block;
+  color: #545454;
+  font-size: 14px;
+  margin-left: 15px;
+}
 
+// task date
+.task-data {
+  @include box-overlay();
+  background-color: #fff;
+  width: 200px;
+  right: 0;
 
+  &_list li {
+    @include task-item();
+    padding: 0;
 
+    div:nth-child(1) {
+      padding: 10px;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
 
+      span:first-of-type {
+        margin-right: 10px;
 
+        svg {
+          fill: grey;
+        }
+      }
+    }
+  }
+}
 
+// project overlay
+.project-overlay {
+  @include box-overlay();
+  background-color: white;
 
+  @include mq('900px') {
+    width: 200px;
+    right: 0;
+  }
 
+  &_list li {
+    @include task-item();
+    padding: 0;
 
+    div:nth-child(1) {
+      width: 100%;
+      padding: 10px;
+    }
+  }
+}
 
+// add project
+.add-project {
+  padding-left: 13px;
+  padding-right: 20px;
+  margin-top: 20px;
 
+  &_input {
+    margin-bottom: 20px;
+  }
 
+  &_name {
+    width: 100%;
+    border: 1px solid #ddd;
+    background-color: white !important;
+    border-radius: 3px;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  &_submit {
+    @include btn('100px');
+  }
+
+  &_cancel {
+    @include cancel();
+  }
+}
