--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+/* ==========================================================================
+   LETS BUILD TODOIST
+   ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900");
 
 // General Settings
@@ -29,13 +32,14 @@ ul {
   padding: 0;
 }
 
-// variables
+// Variables
 $generic-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px,
   rgba(0, 0, 0, 0.1) 0px 4px 11px;
 $generic-border: 1px solid #f1f1f1;
 $generic-bg: #db4c3f;
 
-// mixins
+/* Mixins
+  ============================================ */
 @mixin box-overlay() {
   -webkit-box-shadow: $generic-box-shadow;
   box-shadow: $generic-box-shadow;
@@ -65,7 +69,7 @@ $generic-bg: #db4c3f;
   }
 }
 
-@mixin no-select() {
+@mixin no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -131,9 +135,8 @@ $generic-bg: #db4c3f;
   }
 }
 
-//=================================================
-
-// header
+/* Darkmode
+  ============================================ */
 .darkmode {
   header {
     -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
@@ -143,6 +146,8 @@ $generic-bg: #db4c3f;
   }
 }
 
+/* Header
+  ============================================ */
 header {
   border-bottom: solid 1px #ca2100;
   background-color: $generic-bg;
@@ -156,7 +161,7 @@ header {
   top: 0;
   width: 100%;
 
-  @include mq('900px') {
+  @include mq("900px") {
     padding: 0 10px;
   }
 
@@ -168,18 +173,20 @@ header {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
+    grid-row-gap: 0px;
     max-width: 922px;
     margin: auto;
     height: 44px;
 
-    p, li {
+    p,
+    li {
       color: white;
     }
 
     div {
       &.logo {
         padding-left: 8px;
-        grid-area: 1/1;
+        grid-area: 1 / 1;
 
         img {
           width: 24px;
@@ -187,9 +194,9 @@ header {
       }
 
       &.settings {
-        grid-area: 1/2;
-        text-align: rigth;
-        
+        grid-area: 1 / 2;
+        text-align: right;
+
         ul {
           float: right;
         }
@@ -236,14 +243,14 @@ header {
               }
             }
           }
-          
         }
       }
     }
   }
 }
 
-// sidebar
+/* Sidebar
+  ============================================ */
 .sidebar {
   @include no-select();
   width: 266px;
@@ -255,7 +262,7 @@ header {
   border-right: $generic-border;
   background-color: #fafafa;
 
-  @include mq('900px') {
+  @include mq("900px") {
     display: none;
   }
 
@@ -288,49 +295,49 @@ header {
       display: none;
 
       svg {
-        color: #cacaca
+        color: #cacaca;
       }
     }
 
-    &.active, &:hover {
+    &.active,
+    &:hover {
       font-weight: bold;
       background-color: white;
     }
 
     &:nth-child(1) {
       .sidebar_dot {
-        color: #6accbc
+        color: #6accbc;
       }
     }
-
     &:nth-child(2) {
       .sidebar_dot {
-        color: #fad003
+        color: #fad003;
       }
     }
-
     &:nth-child(3) {
       .sidebar_dot {
-        color: #ff8d85
+        color: #ff8d85;
       }
     }
-
     &:nth-child(4) {
       .sidebar_dot {
-        color: #ff9932
+        color: #ff9932;
       }
     }
-
     &:nth-child(5) {
       .sidebar_dot {
-        color: #af38eb
+        color: #af38eb;
       }
     }
   }
 
   &_projects {
-    @include va('left');
     padding-left: 3px;
+  }
+
+  &_project {
+    @include va("left");
   }
 
   &_dot {
@@ -375,7 +382,7 @@ header {
       display: -ms-flexbox;
       display: flex;
       cursor: pointer;
-      line-height: 1.50;
+      line-height: 1.5;
       font-size: 15px;
       padding-left: 0;
       padding-right: 0;
@@ -404,21 +411,24 @@ header {
         }
       }
 
-      &.active, &:hover {
+      &.active,
+      &:hover {
         font-weight: bold;
         background-color: white;
       }
     }
-  }  
+  }
 }
 
-// show confirm delete
+/* Show Confirm Delete
+  ============================================ */
 .project-delete-modal {
   position: relative;
+  width: 100%;
 
   &_inner {
     @include box-overlay();
-    z-index: 99;
+    z-index: 400;
     width: 200px;
     padding: 10px;
     top: 10px;
@@ -434,7 +444,7 @@ header {
     }
 
     button {
-      @include btn('50px');
+      @include btn("50px");
     }
     span {
       @include cancel();
@@ -443,7 +453,8 @@ header {
   }
 }
 
-// main content
+/* Main Content
+  ============================================ */
 .content {
   display: grid;
   -webkit-box-align: center;
@@ -454,17 +465,22 @@ header {
   margin: auto;
 }
 
-// tasks
+/* Tasks
+  ============================================ */
 .tasks {
   width: 656px;
   background-color: white;
-  margin-left: 266px;
+  margin-left: 30%;
   border-right: $generic-border;
   min-height: calc(100vh);
   vertical-align: top;
-  padding: 80px 40px 40px 84px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 80px;
+  padding-bottom: 84px;
+  align-items: center;
 
-  @include mq('900px') {
+  @include mq("900px") {
     margin-left: 0;
     width: auto;
   }
@@ -485,7 +501,8 @@ header {
     display: flex;
     line-height: 18px;
     color: #333;
-    padding: 10px 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 14px;
     list-style-type: none;
     border-bottom: 1px solid #f0f0f0;
@@ -517,10 +534,11 @@ header {
   }
 }
 
-// add task
+/* Add Task
+  ============================================ */
 .add-task {
   &_overlay {
-    background: rgba(102,102, 102, 0.5);
+    background: rgba(102, 102, 102, 0.5);
     position: absolute;
     margin: auto;
     top: 0;
@@ -533,7 +551,7 @@ header {
     height: calc(100vh);
 
     .add-task_main {
-      @include mq('900px') {
+      @include mq("900px") {
         width: 90%;
       }
 
@@ -570,7 +588,8 @@ header {
     position: relative;
   }
 
-  &_project, &_data {
+  &_project,
+  &_date {
     cursor: pointer;
     float: right;
     color: gray;
@@ -587,11 +606,13 @@ header {
     background-color: white !important;
     border-radius: 3px;
     height: 35px;
-    padding: 0 10px
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  &_cancel, &_submit {
-    @include no-select()
+  &_cancel,
+  &_submit {
+    @include no-select;
   }
 
   &_cancel {
@@ -599,30 +620,34 @@ header {
   }
 
   &_submit {
-    @include btn('90px')
+    @include btn("90px");
   }
 }
 
-.add-task_shallow, .add-project {
-  @include no-select();
+.add-task_shallow,
+.add-project {
+  @include no-select;
   cursor: pointer;
   margin-bottom: 20px;
 }
 
-.add-task_plus, .add-project_plus {
-  color: #dd3b39;
+.add-task_plus,
+.add-project_plus {
+  color: #dd4b39;
   font-size: 18px;
 }
 
-.add-task_text, .add-project_text {
+.add-task_text,
+.add-project_text {
   display: inline-block;
   color: #545454;
   font-size: 14px;
   margin-left: 15px;
 }
 
-// task date
-.task-data {
+/* Task Date
+  ============================================ */
+.task-date {
   @include box-overlay();
   background-color: #fff;
   width: 200px;
@@ -653,12 +678,13 @@ header {
   }
 }
 
-// project overlay
+/* Project Overlay
+  ============================================ */
 .project-overlay {
   @include box-overlay();
   background-color: white;
 
-  @include mq('900px') {
+  @include mq("900px") {
     width: 200px;
     right: 0;
   }
@@ -674,7 +700,8 @@ header {
   }
 }
 
-// add project
+/* Add Project
+  ============================================ */
 .add-project {
   padding-left: 13px;
   padding-right: 20px;
@@ -695,7 +722,7 @@ header {
   }
 
   &_submit {
-    @include btn('100px');
+    @include btn("100px");
   }
 
   &_cancel {
