center the main content correctly

--- a/src/App.scss
+++ b/src/App.scss
@@ -470,7 +470,7 @@ header {
 .tasks {
   width: 656px;
   background-color: white;
-  margin-left: 30%;
+  margin-left: 266px;
   border-right: $generic-border;
   min-height: calc(100vh);
   vertical-align: top;
