add darkMode and fix styling issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -118,7 +118,7 @@ $generic-bg: #db4c3f;
   color: #333;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-size: 14px;
+  font-size: 13px;
   list-style-type: none;
   border-bottom: 1px solid #f0f0f0;
   padding-left: 10px;
@@ -138,11 +138,93 @@ $generic-bg: #db4c3f;
 /* Darkmode
   ============================================ */
 .darkmode {
+  background-color: #252525;
+
   header {
     -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
     background-color: #282828;
     border-color: transparent;
+  }
+  
+  .sidebar {
+    color: hsla(0,0%,100%,.87);
+    background-color: #252525;
+    border-color: #303030;
+
+    &_generic {
+      li  {
+        color: hsla(0,0%,100%,.87);
+        &.active,
+        &:hover {
+          background-color: #303030;
+        }
+        div:nth-child(1)
+        span:first-of-type
+        svg {
+          color: hsla(0,0%,100%,.87)
+        }
+      }
+    }
+
+    &_middle {
+      h2 {
+        color: hsla(0,0%,100%,.87);
+      }
+      span {
+        color: #dd4b39;
+      }
+      border-color: #303030
+    }
+
+    &_project {
+      &.active,
+      &:hover {
+        background-color: #303030;
+      }
+    }
+ 
+    .add-project {
+      &_text {
+        color: hsla(0,0%,100%,.87);
+      }
+      &_plus {
+        color: #dd4b39
+      }
+      :hover {
+        background-color: transparent;
+      }
+    }
+  }
+
+  .project-delete-modal_inner {
+    background-color: #363636;
+  }
+
+  .tasks {
+    color: hsla(0,0%,100%,.87);
+    background-color: #202020;
+    border-color: transparent;
+    
+    &_list 
+    li {
+      border-color: #303030;
+      span {
+        color: hsla(0,0%,100%,.87);
+      }
+    }
+  }
+
+  .add-task {
+    &_text {
+       color: hsla(0,0%,100%,.87);
+     }
+     &_plus {
+       color: #dd4b39
+     }
+     :hover {
+       background-color: transparent;
+     }
   }
 }
 
@@ -383,7 +465,7 @@ header {
       display: flex;
       cursor: pointer;
       line-height: 1;
-      font-size: 15px;
+      font-size: 14px;
       padding-left: 0;
       padding-right: 0;
 
@@ -423,7 +505,8 @@ header {
 /* Show Confirm Delete
   ============================================ */
 .project-delete-modal {
-  position: relative;
+  position: absolute;
+  margin-top: 20px;
   width: 100%;
 
   &_inner {
@@ -438,11 +521,12 @@ header {
     background-color: white;
 
     p {
+      text-align: justify;
       margin-top: 5px;
       margin-bottom: 5px;
       line-height: normal;
       font-weight: normal;
-      font-size: 15px;
+      font-size: 14px;
     }
 
     button {
@@ -488,8 +572,8 @@ header {
   }
 
   h2 {
-    font-size: 20px;
-    font-weight: normal;
+    font-size: 16px;
+    font-weight: bold;
     margin: 0 30px 20px 0;
   }
 
@@ -505,7 +589,7 @@ header {
     color: #333;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 14px;
+    font-size: 13px;
     list-style-type: none;
     border-bottom: 1px solid #f0f0f0;
 
@@ -570,7 +654,7 @@ header {
       transform: translate(-50%, -50%);
 
       .header {
-        font-size: 13px;
+        font-size: 14px;
         margin-bottom: 20px;
         float: left;
       }
@@ -581,7 +665,7 @@ header {
       color: gray;
       float: right;
       font-weight: bold;
-      font-size: 12px;
+      font-size: 13px;
       margin-top: 10px;
     }
   }
@@ -623,6 +707,9 @@ header {
 
   &_submit {
     @include btn("90px");
+  }
+  &:hover {
+    font-weight: bold;
   }
 }
 
