--- a/src/App.scss
+++ b/src/App.scss
@@ -185,7 +185,8 @@ $generic-bg: #db4c3f;
     }
  
     .add-project {
-      &_text {
+      &_text,
+      &_cancel {
         color: hsla(0,0%,100%,.87);
       }
       &_plus {
@@ -199,6 +200,9 @@ $generic-bg: #db4c3f;
 
   .project-delete-modal_inner {
     background-color: #363636;
+    span {
+      color: white;
+    }
   }
 
   .tasks {
@@ -216,16 +220,47 @@ $generic-bg: #db4c3f;
   }
 
   .add-task {
-    &_text {
+    &_text,
+    &_cancel,
+    &_date,
+    &_project {
        color: hsla(0,0%,100%,.87);
      }
      &_plus {
        color: #dd4b39
      }
-     :hover {
-       background-color: transparent;
-     }
+     
   }
+
+  .project-overlay_list li {
+    background-color: #303030;
+    color: white;
+    border-color: #404040;
+    &:hover {
+      background-color: #404040;
+    }
+  }
+
+  .task-date {
+  &_list li {
+    padding: 0 10px;
+    color: white;
+    border-color: #404040;
+      background-color: #303030;
+
+    
+    span:first-of-type {
+      margin-right: 10px;
+      svg {
+        fill: white;
+      }
+    }
+    &:hover {
+      background-color: #404040;
+      font-weight: bold;
+    }
+  }
+}
 }
 
 /* Header
@@ -708,9 +743,7 @@ header {
   &_submit {
     @include btn("90px");
   }
-  &:hover {
-    font-weight: bold;
-  }
+  
 }
 
 .add-task_shallow,
@@ -739,12 +772,12 @@ header {
 .task-date {
   @include box-overlay();
   background-color: #fff;
-  width: 200px;
+  width: 300px;
   right: 0;
 
   &_list li {
     @include task-item();
-    padding: 0;
+    padding: 0 10px;
 
     span:first-of-type {
       margin-right: 10px;
@@ -752,7 +785,9 @@ header {
         fill: grey;
       }
     }
-    
+    &:hover {
+      font-weight: bold;
+    }
   }
 }
 
@@ -761,6 +796,8 @@ header {
 .project-overlay {
   @include box-overlay();
   background-color: white;
+  width: 300px;
+  right: 0;
 
   @include mq("900px") {
     width: 200px;
@@ -769,11 +806,14 @@ header {
 
   &_list li {
     @include task-item();
-    padding: 0;
+    padding: 0 10px;
 
     div:nth-child(1) {
-      width: 100%;
+      width: 50%;
       padding: 10px;
+    }
+    &:hover {
+      font-weight: bold;
     }
   }
 }
