styling quick add task overlay darkmode

--- a/src/App.scss
+++ b/src/App.scss
@@ -260,7 +260,13 @@ $generic-bg: #db4c3f;
       font-weight: bold;
     }
   }
-}
+  }
+
+  .add-task_overlay
+  .add-task_main  {
+    color: white;
+    background-color: #303030;
+  }
 }
 
 /* Header
