--- a/src/App.scss
+++ b/src/App.scss
@@ -153,7 +153,7 @@ $generic-bg: #db4c3f;
     border-color: #303030;
 
     &_generic {
-      li  {
+      li div {
         color: hsla(0,0%,100%,.87);
         &.active,
         &:hover {
@@ -232,7 +232,7 @@ $generic-bg: #db4c3f;
      
   }
 
-  .project-overlay_list li {
+  .project-overlay_list li div {
     background-color: #303030;
     color: white;
     border-color: #404040;
@@ -326,47 +326,44 @@ header {
 
         ul li {
           @include va;
-
-          list-style-type: none;
-          cursor: pointer;
-          width: 30px;
-          height: 30px;
-          text-align: center;
-          vertical-align: middle;
           float: left;
 
-          &:hover {
-            border-radius: 3px;
-            background-color: rgba(255, 255, 255, 0.2);
-          }
+          div {
+            list-style-type: none;
+            cursor: pointer;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            vertical-align: middle;
 
-          &.settings_add {
-            margin-right: 15px;
-            font-size: 30px;
-
-            button {
-              @include transparent-button();
-              color: white;
-              cursor: pointer;
+            &:hover {
+              border-radius: 3px;
+              background-color: rgba(255, 255, 255, 0.2);
             }
-          }
 
-          &.settings_darkmode {
-            button {
+            &.settings_add {
+              margin-right: 15px;
+              font-size: 30px;
+            }
+
+            &.settings_darkmode {
               @include transparent-button();
               color: white;
               cursor: pointer;
-              display: -webkit-box;
-              display: -ms-flexbox;
-              display: flex;
+              padding-top: 5px;
+
+              &:hover {
+               border-radius: 3px;
+                background-color: rgba(255, 255, 255, 0.2);
+              }
 
               svg {
-                width: 20px;
-                height: 20px;
+                width: 18px;
+                height: 18px;
               }
             }
           }
-        }
+        } 
       }
     }
   }
@@ -533,11 +530,12 @@ header {
           }
         }
       }
-
-      &.active,
-      &:hover {
-        font-weight: bold;
-        background-color: white;
+      div {
+        &.active,
+        &:hover {
+          font-weight: bold;
+          background-color: white;
+        }
       }
     }
   }
@@ -548,7 +546,7 @@ header {
 .project-delete-modal {
   position: absolute;
   margin-top: 20px;
-  width: 100%;
+  width: 90%;
 
   &_inner {
     display: flex;
@@ -781,9 +779,12 @@ header {
   width: 300px;
   right: 0;
 
-  &_list li {
+  &_list li{
+    list-style-type: none;
+  } div{
     @include task-item();
     padding: 0 10px;
+    list-style: none;
 
     span:first-of-type {
       margin-right: 10px;
@@ -810,10 +811,12 @@ header {
     right: 0;
   }
 
-  &_list li {
+  &_list li{
+    list-style: none;
+  } div {
     @include task-item();
     padding: 0 10px;
-
+    
     div:nth-child(1) {
       width: 50%;
       padding: 10px;
