--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@ ul {
 $generic-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px,
   rgba(0, 0, 0, 0.1) 0px 4px 11px;
 $generic-border: 1px solid #f1f1f1;
-$generic-bg: #db4c3f;
+$generic-bg: #4c956c;
 
 /* Mixins
   ============================================ */
@@ -172,7 +172,7 @@ $generic-bg: #db4c3f;
         color: hsla(0,0%,100%,.87);
       }
       span {
-        color: #dd4b39;
+        color: #4c956c;
       }
       border-color: #303030
     }
@@ -190,7 +190,7 @@ $generic-bg: #db4c3f;
         color: hsla(0,0%,100%,.87);
       }
       &_plus {
-        color: #dd4b39
+        color: $generic-bg;
       }
       :hover {
         background-color: transparent;
@@ -227,7 +227,7 @@ $generic-bg: #db4c3f;
        color: hsla(0,0%,100%,.87);
      }
      &_plus {
-       color: #dd4b39
+       color: $generic-bg;
      }
      
   }
@@ -272,7 +272,7 @@ $generic-bg: #db4c3f;
 /* Header
   ============================================ */
 header {
-  border-bottom: solid 1px #ca2100;
+  border-bottom: solid 1px #4c956c;
   background-color: $generic-bg;
   -webkit-transition: height 200ms ease-in;
   transition: height 200ms ease-in;
@@ -312,7 +312,7 @@ header {
         grid-area: 1 / 1;
 
         img {
-          width: 24px;
+          width: 27px;
         }
       }
 
@@ -759,7 +759,7 @@ header {
 
 .add-task_plus,
 .add-project_plus {
-  color: #dd4b39;
+  color: $generic-bg;
   font-size: 18px;
 }
 
