--- a/src/App.scss
+++ b/src/App.scss
@@ -878,7 +878,36 @@ header {
 }
 
 .login-wrapper {
+  width: 300px;
+  height: 100%;
+  margin: auto;
+  form {
+    @include box-overlay();
+    height: 300px;
+    width: 300px;
+    .inputs-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+  
+    input {
+      width: 100%;
+      border: 1px solid #ddd;
+      background-color: white !important;
+      border-radius: 3px;
+      height: 35px;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    button {
+      @include btn('50px')
+    }
+  }
+  
 }
