--- a/src/App.scss
+++ b/src/App.scss
@@ -877,37 +877,57 @@ header {
   
 }
 
+// login and signup form
+
 .login-wrapper {
-  width: 300px;
-  height: 100%;
+  width: 400px;
+  height: fit-content;
   margin: auto;
-  form {
-    @include box-overlay();
-    height: 300px;
-    width: 300px;
-    .inputs-wrapper {
+  div {
+    width: 90%;
+    margin: 1% 0 1% 0;
+    align-items: center;
+    h3 {
+      font-size: 14px;
+    }
+    &.helper-block {
+      color:rgba(102, 102, 102, 0.5);
       display: flex;
       flex-direction: column;
     }
-
+  }
+  .full-logo {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 5%;
+    img {
+      width: 120px;
+    }
+  }
+  form {
+    @include box-overlay();
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  
-    input {
-      width: 100%;
-      border: 1px solid #ddd;
-      background-color: white !important;
-      border-radius: 3px;
-      height: 35px;
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-
-    button {
-      @include btn('50px')
-    }
+    height: fit-content;
+    width: 400px;
   }
+  
+  input {
+    width: 100%;
+    border: 1px solid #ddd;
+    background-color: white !important;
+    border-radius: 3px;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  button {
+    @include btn('50px');
+    width: 100%;
+  }
+  
   
 }
