--- a/src/App.scss
+++ b/src/App.scss
@@ -324,7 +324,10 @@ header {
         text-align: right;
 
         ul {
+          width: 100px;
+          display: flex;
           float: right;
+          justify-content: space-between;
         }
 
         ul li {
@@ -345,7 +348,6 @@ header {
             }
 
             &.settings_add {
-              margin-right: 15px;
               font-size: 30px;
             }
 
@@ -363,6 +365,16 @@ header {
               svg {
                 width: 18px;
                 height: 18px;
+              }
+            }
+
+            &.sign-out {
+              margin-left: 10px;
+              border: solid 2px white;
+              border-radius: 50%;
+              p {
+                margin: auto;
+                padding-top: 5px;
               }
             }
           }
@@ -925,4 +937,47 @@ header {
   .alert-error {
     color: red;
   }
+}
+
+// user settings
+.user-settings {
+  position: inherit;
+
+  &_inner {
+    @include box-overlay();
+    margin-left: 13.5%;
+    height: 64px;
+    z-index: 400;
+    width: 200px;
+    padding: 2px;
+    top: 44px;
+    background-color: white;
+    font-size: 13px;
+
+    div {
+
+      &.user-email {
+        
+      }
+
+      &.logout {
+
+        &:hover {
+          font-weight: bold;
+          background-color: rgb(216, 216, 216);
+          cursor: pointer;
+        }
+      }
+
+      display: flex;
+      align-items: center;
+      height: 30px;
+      padding-left: 5px;
+    }
+    p {
+      padding-left: 10px;
+      color: black;
+    }
+  }
+  
 }
