--- a/src/App.scss
+++ b/src/App.scss
@@ -900,6 +900,7 @@ header {
       color: rgba(102, 102, 102, 0.5);
       display: flex;
       flex-direction: column;
+      font-size: 14px;
     }
   }
   .full-logo {
@@ -934,18 +935,24 @@ header {
     @include btn("50px");
     width: 100%;
   }
-  .alert-error {
+  .alert_error {
     color: red;
+    font-size: 14px;
+  }
+  .alert_message {
+    color: black;
+    font-size: 14px;
   }
 }
 
 // user settings
 .user-settings {
   position: inherit;
+  display: flex;
+  flex-direction: row-reverse;
 
   &_inner {
     @include box-overlay();
-    margin-left: 13.5%;
     height: 64px;
     z-index: 400;
     width: 200px;
@@ -955,13 +962,7 @@ header {
     font-size: 13px;
 
     div {
-
-      &.user-email {
-        
-      }
-
       &.logout {
-
         &:hover {
           font-weight: bold;
           background-color: rgb(216, 216, 216);
@@ -979,5 +980,14 @@ header {
       color: black;
     }
   }
-  
+}
+
+//loading
+.loading {
+  height: 400px;
+  color: #4c956c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
