--- a/src/App.scss
+++ b/src/App.scss
@@ -601,7 +601,7 @@ header {
   max-width: 912px;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: flex-start;
   grid-template-columns: 1fr auto;
   max-width: 922px;
   margin: auto;
