--- a/src/App.scss
+++ b/src/App.scss
@@ -891,7 +891,7 @@ header {
   margin: auto;
 
   .helper {
-    bottom: 50px;
+    top: 550px;
     position: absolute;
     width: 400px;
     .text {
